kustomize/overlays/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-service
  namespace: sid-behera88-dev
spec:
  replicas: 1
  template:
    spec:
      containers:
      - image: quay.io/sid_behera88/library:latest
        imagePullPolicy: Always
        name: library-service
        ports:
          - containerPort: 8080
            protocol: TCP
        env:
          - name: APP_GREETING
            value: 'Hey Siddhartha, this is the DEVELOPMENT environment of the App'
