kustomize/overlays/test/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: library-service
  namespace: sid-behera88-dev
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: library-service
    weight: 100
  wildcardPolicy: None
